[package]
name = "egui_canvas"
version = "0.1.0"
edition = "2021"
description = "minimal egui painter using Canvas2D. not for webgl available environment."
readme ="readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version ="0.3", features =["HtmlCanvasElement","CanvasRenderingContext2d","Window","Document","HtmlImageElement"] }
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
epaint ="0.17"
image ="0.24"
base64  = "0.13"
log ="0.4"
[dev-dependencies]
winit ="0.26.1"
egui_winit_platform="0.14.0"
instant = "0.1.12"
egui ="0.17"
console_log ="0.2"
console_error_panic_hook="0.1"
wasm-bindgen-futures="0.4"
epi="0.17"
egui_demo_lib = "0.18.0"
[workspace]
members= ["run-wasm"]

[patch.crates-io]
winit ={git="https://github.com/t18b219k/winit.git",branch="composition-event"}
egui_winit_platform={git="https://github.com/t18b219k/egui_winit_platform.git",branch="master"}
